<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/SELECT_CLASS"
        android:layout_marginStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <Spinner
        android:id="@+id/spinner_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/spinner_class"
        android:layout_below="@id/textView_class"
        style="@style/SpinnerStyle"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:id="@+id/textView_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_class"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/CHOOSE_SUBJECT"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <Spinner
        android:id="@+id/spinner_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/spinner_subject"
        android:layout_margin="10dp"
        android:layout_below="@id/textView_subject"
        style="@style/SpinnerStyle"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:id="@+id/textView_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_subject"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/CHOOSE_ITEM"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <Spinner
        android:id="@+id/spinner_item"
        android:layout_width="match_parent"
        android:contentDescription="@string/spinner_item"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/textView_item"
        style="@style/SpinnerStyle"
        android:spinnerMode="dropdown"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_item"
        android:text="@string/submit"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/submit_button" />
</RelativeLayout>

</ScrollView>