<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigation_header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/nav_toolbar_color"
        android:contentDescription="@string/nav_toolbar_desc"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user_profile_pic"
            android:contentDescription="@string/user_profile_pic" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:paddingTop="5dp"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>