<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dialog_background"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_search_prompt"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_prompt"
            android:textColor="@color/white"
            android:backgroundTint="@color/prompt_button_color"
            android:textAllCaps="false"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_prompt"
            android:textColor="@color/white"
            android:backgroundTint="@color/prompt_button_color"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>