<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background"

    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#494747"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow_icon"
            android:padding="5dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <EditText
            android:id="@+id/searchbar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/search_round_edges"
            android:drawablePadding="10dp"
            android:elevation="2dp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:ems="10"
            android:fadingEdge="none"
            android:hint="@string/search_bar_hint"
            android:padding="10dp"
            android:shadowColor="#000000"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="14sp"
            android:autofillHints="" />
        <ImageView
            android:id="@+id/mic_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mic_icon"
            android:padding="5dp"
            android:src="@drawable/baseline_mic_24" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/recent_search"
        android:background="@color/nav_menu_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
        app:layout_constraintVertical_bias="0.011">

        <TextView
            android:id="@+id/RecentSearches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/recent_search"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ClearSearches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="20dp"
            android:text="@string/clear_search"
            android:textColor="@color/clear_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/search_scroll"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/scroll_view_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecentSearches">
            <LinearLayout
                android:id="@+id/scroll_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>